Small fix on background images not displaying correctly

--- a/css/style.css
+++ b/css/style.css
@@ -595,7 +595,7 @@ input:checked + .btn__dropdown::before {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-image: url(/assets/images/svgs/icon_ue_flag.svg);
+  background-image: url(../assets/images/svgs/icon_ue_flag.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 8px 4px;
@@ -615,7 +615,7 @@ input:checked + .btn__dropdown::before {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-image: url(/assets/images/svgs/icon_world.svg);
+  background-image: url(../assets/images/svgs/icon_world.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 8px 4px;
